AI-JADEDEVS4/src/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Scoping_Activity_Type__c</fullName>
        <description>Scoping Engaged = Scoping internally engaged.
Initial Scoping Call = Client call, including on-sites.
Follow-up Scoping Call = Follow-up client call, including on-sites.
Proposal Sent = Scoping sent a proposal.
SOW Sent = Scoping sent an SOW.</description>
        <inlineHelpText>Scoping Engaged = Scoping internally engaged.
Initial Scoping Call = Client call, including on-sites.
Follow-up Scoping Call = Follow-up client call, including on-sites.
Proposal Sent = Scoping sent a proposal.
SOW Sent = Scoping sent an SOW.</inlineHelpText>
        <label>Scoping Activity Type</label>
        <picklist>
            <picklistValues>
                <fullName>Scoping Engaged</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Initial Scoping Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Follow-up Scoping Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proposal Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SOW Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post-Implementation Review</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type_Linked__c</fullName>
        <label>Type (Linked)</label>
        <picklist>
            <picklistValues>
                <fullName>Demonstration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email/Voicemail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Info Exchange</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead Referral (From Partner)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead Referral (to Partner)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meeting Scheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Customer Transition Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Scoping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reference Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rep Self Sourced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rep to Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Voicemail Left</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Welcome Letter Sent</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Upsell_Status__c</fullName>
        <label>Upsell Status</label>
        <picklist>
            <picklistValues>
                <fullName>Attempting Contact-Status Not Know Yet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Budget Constraints</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Champion Left-Resell Needed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change in Control-Acquired or Financial Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Has system/module that subs for AP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Implementation In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Process-Not going to roll it out beyond one group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nice to have-No compelling ROI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Planning on/or may buy more in 2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor Implementation Experience/Lacking Resources</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Usability Issues and/or Lacking Key Functionality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Single Entity-Not a Consolidation Candidate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upsell in Progress/Upsell Task/UpSell Candidate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upsell in the last 6 months</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>qbdialer__CallRecordingURL__c</fullName>
        <description>Link to the call recording</description>
        <label>Call Recording</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>qbdialer__Call_Date_Time__c</fullName>
        <label>Call Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>qbdialer__Call_Dial_Number__c</fullName>
        <description>Total number of dials on the record being called</description>
        <label>Call Dial Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>qbdialer__Call_Hour__c</fullName>
        <description>Hour in which the call was placed from the record&apos;s perspective</description>
        <label>Call Hour</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>qbdialer__Call_Lead_Status__c</fullName>
        <description>Lead Status of the record called</description>
        <label>Call Lead Status</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>qbdialer__Call_Ring_Time__c</fullName>
        <description>Ring Time of the phone call</description>
        <label>Call Ring Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>qbdialer__Call_Time_Zone__c</fullName>
        <description>Time zone of the number being called</description>
        <label>Call Time Zone</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>qbdialer__Callback_Date_Time__c</fullName>
        <label>Callback Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>qbdialer__ImpressionId__c</fullName>
        <externalId>true</externalId>
        <label>Impression ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>qbdialer__SMSReminder__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Text message reminders will be sent to all attendees at the set reminder time.</inlineHelpText>
        <label>Send text msg reminder to all attendees</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllActivities</fullName>
        <filterScope>Team</filterScope>
        <label>All Activities</label>
    </listViews>
    <listViews>
        <fullName>KP_Activities_Comp</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>TASK.TYPE</columns>
        <columns>Type_Linked__c</columns>
        <columns>BD_Activity__c</columns>
        <columns>TASK.CREATED_DATE</columns>
        <columns>EVENT.START_DATE_TIME</columns>
        <columns>EVENT.END_DATE_TIME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
            <value>Pizzi</value>
        </filters>
        <filters>
            <field>TASK.STATUS</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Kenny P - Due this month &amp; Completed</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>KPpast_Due_Tasks</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>TASK.TYPE</columns>
        <columns>Type_Linked__c</columns>
        <columns>BD_Activity__c</columns>
        <columns>TASK.CREATED_DATE</columns>
        <columns>EVENT.START_DATE_TIME</columns>
        <columns>EVENT.END_DATE_TIME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
            <value>Pizzi</value>
        </filters>
        <filters>
            <field>TASK.STATUS</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Kenny P - Past Due Tasks</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>Ken_Activities</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>TASK.TYPE</columns>
        <columns>Type_Linked__c</columns>
        <columns>BD_Activity__c</columns>
        <columns>TASK.CREATED_DATE</columns>
        <columns>EVENT.START_DATE_TIME</columns>
        <columns>EVENT.END_DATE_TIME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
            <value>Pizzi</value>
        </filters>
        <filters>
            <field>TASK.STATUS</field>
            <operation>equals</operation>
            <value>Not Started</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Kenny P- Due this month &amp; Not Started</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>LMPast_Due_Tasks</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>TASK.TYPE</columns>
        <columns>Type_Linked__c</columns>
        <columns>BD_Activity__c</columns>
        <columns>TASK.CREATED_DATE</columns>
        <columns>EVENT.START_DATE_TIME</columns>
        <columns>EVENT.END_DATE_TIME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
            <value>Magee</value>
        </filters>
        <filters>
            <field>TASK.STATUS</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Lakesha M - Past Due Tasks</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>LM_Activities</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>TASK.TYPE</columns>
        <columns>Type_Linked__c</columns>
        <columns>BD_Activity__c</columns>
        <columns>TASK.CREATED_DATE</columns>
        <columns>EVENT.START_DATE_TIME</columns>
        <columns>EVENT.END_DATE_TIME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
            <value>Magee</value>
        </filters>
        <filters>
            <field>TASK.STATUS</field>
            <operation>equals</operation>
            <value>Not Started</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Lakesha M- Due this month &amp; Not Started</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>LM_Activities_Comp</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>TASK.TYPE</columns>
        <columns>Type_Linked__c</columns>
        <columns>BD_Activity__c</columns>
        <columns>TASK.CREATED_DATE</columns>
        <columns>EVENT.START_DATE_TIME</columns>
        <columns>EVENT.END_DATE_TIME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
            <value>Magee</value>
        </filters>
        <filters>
            <field>TASK.STATUS</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Lakesha M - Due this month &amp; Completed</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>Livengood_Past_Due_Tasks</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>TASK.TYPE</columns>
        <columns>Type_Linked__c</columns>
        <columns>BD_Activity__c</columns>
        <columns>TASK.CREATED_DATE</columns>
        <columns>EVENT.START_DATE_TIME</columns>
        <columns>EVENT.END_DATE_TIME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
            <value>Livengood</value>
        </filters>
        <filters>
            <field>TASK.STATUS</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Livengood - Past Due Tasks</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>MyActivities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Activities</label>
    </listViews>
    <listViews>
        <fullName>PL_Activities</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>TASK.TYPE</columns>
        <columns>Type_Linked__c</columns>
        <columns>BD_Activity__c</columns>
        <columns>TASK.CREATED_DATE</columns>
        <columns>EVENT.START_DATE_TIME</columns>
        <columns>EVENT.END_DATE_TIME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
            <value>Livengood</value>
        </filters>
        <filters>
            <field>TASK.STATUS</field>
            <operation>equals</operation>
            <value>Not Started</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>LIvengood- Due this month &amp; Not Started</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>PL_Activities_Comp</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>TASK.TYPE</columns>
        <columns>Type_Linked__c</columns>
        <columns>BD_Activity__c</columns>
        <columns>TASK.CREATED_DATE</columns>
        <columns>EVENT.START_DATE_TIME</columns>
        <columns>EVENT.END_DATE_TIME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
            <value>Livengood</value>
        </filters>
        <filters>
            <field>TASK.STATUS</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Livengood - Due this month &amp; Completed</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <columns>TASK.STATUS</columns>
        <columns>TASK.CLOSED</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.DUE_DATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>